<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/tv_boas_vindas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Olá, Usuário!"
            android:textSize="18sp" />
        <Button
            android:id="@+id/btn_sair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@android:color/holo_red_dark"
            android:text="Sair" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/fundo_card_cinza">

        <EditText
            android:id="@+id/et_nova_tarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_hint_task"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/tv_data_selecionada"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_set_date"
                android:padding="12dp"
                android:minHeight="48dp"
                android:gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@android:color/holo_blue_light"
                android:clickable="true" />

            <TextView
                android:id="@+id/tv_hora_selecionada"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_set_time"
                android:padding="12dp"
                android:minHeight="48dp"
                android:gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@android:color/holo_blue_light"
                android:clickable="true" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_adicionar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_add_button"
            android:layout_marginTop="8dp" />

    </LinearLayout>

    <ListView
        android:id="@+id/lv_tarefas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="#00000000"
        android:dividerHeight="0dp" />

</LinearLayout>